--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -23,7 +23,7 @@ import "./about.css"
 				
 			</p>
 			<p class="about__text">
-				Espero poder tener la oprtunidad de consolidarme  en este ámbito.
+				Espero poder tener la oportunidad de consolidarme  en este ámbito.
 			</p>
 			<SocialIcons width="25" height="25"/>
 		</div>
